# chrysanthemum

./: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: action.rs  command.rs  config.rs  confusable.rs  confusable_data.txt  filter.rs  main.rs  message.rs  model.rs  reaction.rs
tests/: integration_test.rs
