[package]
name = "chrysanthemum"
version = "0.2.16"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
dotenv = "0.15.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
serde_regex = "1.1.0"
once_cell = "1.10.0"
chrono = "0.4.19"
reqwest = "0.11"
futures = "0.3.17"

influxdb = { version = "0.5.0", features = ["derive"] }
sentry = "0.25.0"

tracing-log = "0.1.2"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
eyre = "0.6.5"
color-eyre = "0.5.11"
thiserror = "1.0.30"

twilight-gateway = "0.7.1"
twilight-http = "0.7.1"
twilight-model = "0.7.1"
twilight-cache-inmemory = "0.7.1"
twilight-embed-builder = "0.7.1"
twilight-mention = "0.7.0"
twilight-util = { version = "0.7.0", features = ["builder"] }

[profile.dev.package.backtrace]
opt-level = 3

[dev-dependencies]
pretty_assertions = "1.2.0"
