[package]
name = "chrysanthemum"
version = "0.4.2"
edition = "2018"

[dependencies]
regex = "1.5.5"
dotenv = "0.15.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.9.17"
serde_regex = "1.1.0"
once_cell = "1.10.0"
chrono = "0.4.19"
reqwest = "0.11"
futures = "0.3.17"

influxdb = { version = "0.5.0", features = ["derive"] }
sentry = { version = "0.29.2", features = ["tracing", "backtrace" ]}
sentry-tracing = "0.29.2"

tracing-log = "0.1.2"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json", "registry"] }
eyre = "0.6.5"
color-eyre = "0.6.2"
thiserror = "1.0.30"

twilight-gateway = "0.14.0"
twilight-http = "0.14.0"
twilight-model = "0.14.0"
twilight-cache-inmemory = "0.14.0"
twilight-mention = "0.14.0"
twilight-util = { version = "0.14.0", features = ["builder"] }

[profile.dev.package.backtrace]
opt-level = 3

[dev-dependencies]
pretty_assertions = "1.2.0"
