[package]
name = "chrysanthemum"
version = "0.4.3"
edition = "2018"

[dependencies]
regex = "1.11.3"
dotenv = "0.15.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.17"
serde_regex = "1.1.0"
once_cell = "1.21.3"
chrono = "0.4.42"
reqwest = "0.12"
futures = "0.3.31"

tracing-log = "0.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "registry"] }
eyre = "0.6.12"
color-eyre = "0.6.5"
thiserror = "2.0.16"

twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-cache-inmemory = "0.16.0"
twilight-mention = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }

[profile.dev.package.backtrace]
opt-level = 3

[dev-dependencies]
pretty_assertions = "1.4.1"
